--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,5 +82,5 @@ body {
 }
 
 .hero {
-  background: url("./../images/hero-background.png") no-repeat center / cover fixed;
+  background: url("./../images/circles.png") no-repeat center / cover fixed;
 }
