--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,5 +82,6 @@ body {
 }
 
 .hero {
-  background: url("./../images/circles.png") no-repeat center / cover fixed;
+  background: rgba(221, 214, 254, 0.5);
+  backdrop-filter: blur(20px);
 }
